--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.7.5
 aniso8601==9.0.1
 astroid==2.9.1
 click==8.0.3
+coverage==6.2
 Flask==2.0.2
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
