--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.7.5
 aniso8601==9.0.1
 astroid==2.9.1
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
 coverage==6.2
 Flask==2.0.2
@@ -8,6 +10,7 @@ Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+idna==3.3
 importlib-metadata==4.10.0
 importlib-resources==5.4.0
 isort==5.10.1
@@ -20,11 +23,15 @@ mccabe==0.6.1
 platformdirs==2.4.1
 psycopg2==2.9.2
 pylint==2.12.2
+python-coveralls==2.9.3
 pytz==2021.3
+PyYAML==6.0
+requests==2.27.1
 six==1.16.0
 SQLAlchemy==1.4.29
 toml==0.10.2
 typing-extensions==4.0.1
+urllib3==1.26.7
 Werkzeug==2.0.2
 wrapt==1.13.3
 zipp==3.6.0
