--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
 coverage==6.2
+coveralls==3.3.1
+docopt==0.6.2
 Flask==2.0.2
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
@@ -23,7 +25,6 @@ mccabe==0.6.1
 platformdirs==2.4.1
 psycopg2==2.9.2
 pylint==2.12.2
-python-coveralls==2.9.3
 pytz==2021.3
 PyYAML==6.0
 requests==2.27.1
