--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Coverage test
         run: |
           coverage run -m unittest discover
-          coverage report
+          coverage report --fail-under=100
