--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,12 @@ jobs:
         run: |
           coverage run -m unittest discover
           coverage report --fail-under=90
+      - name: Check docker installed or not
+        run: docker run hello-world
+      - name: Push to docker hub
+        uses: docker/build-push-action/@v1
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+          repository: ${{secrets.DOCKERHUB_REPO}}
+          tag_with_ref: true
