--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           coverage run -m unittest discover
           coverage report --fail-under=90
-      - name: Pylint
+      - name: Pylint stage
         run: |
           pylint ./deparment_app
       - name: Check docker installed or not
