--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           coverage report --fail-under=90
       - name: Pylint stage
         run: |
-          pylint ./deparment_app/
+          pylint *
       - name: Check docker installed or not
         run: docker run hello-world
       - name: Push to docker hub
